--- a/faq.html
+++ b/faq.html
@@ -19,25 +19,23 @@
             <li><a href="index.html">ACCUEIL</a></li>
             <li><a href="#Caracteristiques">CARACTERISTIQUES</a></li>
             <li><a href= "astronaute.html">ASTRONAUTE</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="#FAQ">FAQ</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
-    <div class="astronaute">
-      <img src="images/astonaute.png" alt="astronaute" class= "astro">
-      <p class="soon">A  bientôt !</p>
-    </div>
+  <div class= "faq">
+    <p class= "question">Pourquoi ... ?</p>
+    <p class= "answer">Parce que...</p>
+    <p class= "question">Comment... ?</p>
+    <p class= "answer">Nous faisons comme ça.</p>
+    <p class= "question">Combien de temps...?</p>
+    <p class= "answer">Nous pouvons espérérer d'ici 2022.</p>
 
-    <div class="launchAstro">
-      <p class="bye">Bye !</p>
-    </div>
   </div>
 
-
-
-    <script src="scripts/scriptAstro.js"></script>
+  <script src="scripts/scriptFAQ.js"></script>
 
 </body>
 </html>
