--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <title><SPACEX</title>
+  <title>SPACEX</title>
       <link rel="stylesheet" href="styles/style.css"/>
 <meta charset="utf-8"/>
 </head>
@@ -19,7 +19,7 @@
             <li><a href="index.html">ACCUEIL</a></li>
             <li><a href="#Caracteristiques">CARACTERISTIQUES</a></li>
             <li><a href= "astronaute.html">ASTRONAUTE</a></li>
-            <li><a href="#FAQ">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
           </ul>
         </nav>
       </div>
