--- a/faq.html
+++ b/faq.html
@@ -26,12 +26,12 @@
     </header>
 
   <div class= "faq">
-    <p class= "question">Pourquoi ... ?</p>
-    <p class= "answer">Parce que...</p>
-    <p class= "question">Comment... ?</p>
-    <p class= "answer">Nous faisons comme ça.</p>
-    <p class= "question">Combien de temps...?</p>
-    <p class= "answer">Nous pouvons espérérer d'ici 2022.</p>
+    <p class= "question1">Pourquoi ... ?</p>
+    <p class= "answer1">Parce que...</p>
+    <p class= "question2">Comment... ?</p>
+    <p class= "answer2">Nous faisons comme ça.</p>
+    <p class= "question3">Combien de temps...?</p>
+    <p class= "answer3">Nous pouvons espérérer d'ici 2022.</p>
 
   </div>
 
